--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                         </p>
                     </div>
                     <div class="project-img">
-                        <img src="images/hospitalMS.jpg" alt="hospital MS">
+                        <img src="images/hospitalMS.jpeg" alt="hospital MS">
                     </div>
                 </div>
                 <div class="project-item">
