--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
+<!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Jeremiah Joseph(famously known as kaka jere) I'm A polymath, of-course it's okay to call me so. I provide services in three industries: Technology (Computer Science), Entertainment (Music) and Finance (Accounting)...">
+    <meta name="description" content="Jeremiah Joseph(famously known as kaka jere) is A polymath...">
     <meta name="keywords" content="kakajere, kaka jere, pp jere, graphic designer, web developer, software, computer hardware, software developer, teacher, accounting consultant">
     <meta name="author" content="Jeremiah Joseph">
     <link rel="stylesheet" href="style.css">
