--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
                     <li><a href="#projects" data-after="Projects">Projects</a></li>
                     <li><a href="#about" data-after="About">About</a></li>
                     <li><a href="#contact" data-after="Contact">Contact</a></li>
+                    <li><a  href="gbtcOnly.html" data-after="GBTC(Arusha)" target="_blank">GBTC(Arusha)</a></li>
+                    <li><a  href="gallery.html" data-after="Gallery" target="_blank">Gallery</a></li>
                 </ul>
             </div>
         </div>
@@ -60,7 +62,7 @@
                 <div class="service-item">
                     <div class="icon"><i class="fa fa-chalkboard-teacher"></i></div>
                     <h3>Teacher</h3>
-                    <p>I teach computer, English and Music lessons. I am a head of Trainers at J and P Consults. Teaching has been my thing since my early teen ages. I've written a book on Music(Piano made simple).
+                    <p>I teach computer, English and music lessons. I am a head of Trainers at J and P Consults. Teaching has been my thing since my early teen ages. I've written a book on Music(Piano made simple).
                     </p>
                 </div>
                 <div class="service-item">
