--- a/gallery.html
+++ b/gallery.html
@@ -151,7 +151,7 @@
                 setTimeout(() => {
                     document.location = 'galleryKakaJere/gallery_newMember/index.html';
                 }, 3000);
-            } else if (e == 'jpeABC') {
+            } else if (e == 'jpeABC..14') {
                 document.querySelector('#uName').style.backgroundColor = 'green';
                 document.querySelector('#JPE').style.display = 'flex';
                 setTimeout(() => {
