--- a/galleryKakaJere/gallery_jpeConsult/index.html
+++ b/galleryKakaJere/gallery_jpeConsult/index.html
@@ -363,7 +363,7 @@
                         <div class="download">
                             <a download><i class="fas fa-download"></i></a>
                         </div>
-                        <div class="descTxt">Paschal H. Mgassa</div>
+                        <div class="descTxt">Pascal H. Mgassa</div>
                     </div>
                 </div>
                 <div class="imageContainer" data-poze="Head of Trainers">
@@ -960,35 +960,35 @@
                     <video src="Video/Songs/Timi Dakolo - Everything (Amen) (Official Video).webm" controls
                         controlslist='download'> </video>
                     <span class="download">
-                        <a href="../videos/Timi Dakolo - Everything (Amen) (Official Video).webm" download>Timi Dakolo -
+                        <a href="Videos/Timi Dakolo - Everything (Amen) (Official Video).webm" download>Timi Dakolo -
                             Everything (Amen)<i class="fas fa-download"></i></a></span>
                 </div>
                 <div class="videoCont">
                     <video src="Video/Songs/Timi Dakolo - Everything (Amen) (Official Video).webm" controls
                         controlslist='download'> </video>
                     <span class="download">
-                        <a href="../videos/Timi Dakolo - Everything (Amen) (Official Video).webm" download>Timi Dakolo -
+                        <a href="Videos/Timi Dakolo - Everything (Amen) (Official Video).webm" download>Timi Dakolo -
                             Everything (Amen)<i class="fas fa-download"></i></a></span>
                 </div>
                 <div class="videoCont">
                     <video src="Video/Songs/Timi Dakolo - Everything (Amen) (Official Video).webm" controls
                         controlslist='download'> </video>
                     <span class="download">
-                        <a href="../videos/Timi Dakolo - Everything (Amen) (Official Video).webm" download>Timi Dakolo -
+                        <a href="Videos/Timi Dakolo - Everything (Amen) (Official Video).webm" download>Timi Dakolo -
                             Everything (Amen)<i class="fas fa-download"></i></a></span>
                 </div>
                 <div class="videoCont">
                     <video src="Video/Songs/Timi Dakolo - Everything (Amen) (Official Video).webm" controls
                         controlslist='download'> </video>
                     <span class="download">
-                        <a href="../videos/Timi Dakolo - Everything (Amen) (Official Video).webm" download>Timi Dakolo -
+                        <a href="Videos/Timi Dakolo - Everything (Amen) (Official Video).webm" download>Timi Dakolo -
                             Everything (Amen)<i class="fas fa-download"></i></a></span>
                 </div>
                 <div class="videoCont">
                     <video src="Video/Songs/Timi Dakolo - Everything (Amen) (Official Video).webm" controls
                         controlslist='download'> </video>
                     <span class="download">
-                        <a href="../videos/Timi Dakolo - Everything (Amen) (Official Video).webm" download>Timi Dakolo -
+                        <a href="Videos/Timi Dakolo - Everything (Amen) (Official Video).webm" download>Timi Dakolo -
                             Everything (Amen)<i class="fas fa-download"></i></a></span>
                 </div>
 
@@ -1066,42 +1066,42 @@
                 <div class="audioCont">
                     <audio src="Audio/enock jonas   baraka.mp3" controls></audio>
                     <span class="download">
-                        <a href="../Audios/enock jonas   baraka.mp3" download>Enock Jonas (Baraka)<i
+                        <a href="Audios/enock jonas   baraka.mp3" download>Enock Jonas (Baraka)<i
                                 class="fas fa-download"></i></a></span>
                 </div>
 
                 <div class="audioCont">
                     <audio src="Audio/enock jonas   baraka.mp3" controls></audio>
                     <span class="download">
-                        <a href="../Audios/enock jonas   baraka.mp3" download>Enock Jonas (Baraka)<i
+                        <a href="Audios/enock jonas   baraka.mp3" download>Enock Jonas (Baraka)<i
                                 class="fas fa-download"></i></a></span>
                 </div>
 
                 <div class="audioCont">
                     <audio src="Audio/enock jonas   baraka.mp3" controls></audio>
                     <span class="download">
-                        <a href="../Audios/enock jonas   baraka.mp3.webm" download>Enock Jonas (Baraka)<i
+                        <a href="Audios/enock jonas   baraka.mp3.webm" download>Enock Jonas (Baraka)<i
                                 class="fas fa-download"></i></a></span>
                 </div>
 
                 <div class="audioCont">
                     <audio src="Audio/enock jonas   baraka.mp3" controls></audio>
                     <span class="download">
-                        <a href="../Audios/enock jonas   baraka.mp3" download>Enock Jonas (Baraka)<i
+                        <a href="Audios/enock jonas   baraka.mp3" download>Enock Jonas (Baraka)<i
                                 class="fas fa-download"></i></a></span>
                 </div>
 
                 <div class="audioCont">
                     <audio src="Audio/enock jonas   baraka.mp3" controls></audio>
                     <span class="download">
-                        <a href="../Audios/enock jonas   baraka.mp3" download>Enock Jonas (Baraka)<i
+                        <a href="Audios/enock jonas   baraka.mp3" download>Enock Jonas (Baraka)<i
                                 class="fas fa-download"></i></a></span>
                 </div>
 
                 <div class="audioCont">
                     <audio src="Audio/enock jonas   baraka.mp3" controls></audio>
                     <span class="download">
-                        <a href="../Audios/enock jonas   baraka.mp3" download>Enock Jonas (Baraka)<i
+                        <a href="Audios/enock jonas   baraka.mp3" download>Enock Jonas (Baraka)<i
                                 class="fas fa-download"></i></a></span>
                 </div>
                 <script>
