--- a/galleryKakaJere/gallery_winfredMtove/index.html
+++ b/galleryKakaJere/gallery_winfredMtove/index.html
@@ -987,150 +987,157 @@
                     <video src="Video/Songs/Timi Dakolo - Everything (Amen) (Official Video).webm" controls
                         controlslist='download'> </video>
                     <span class="download">
-                        <a href="../videos/Timi Dakolo - Everything (Amen) (Official Video).webm" download>Timi Dakolo -
+                        <a href="Video/Songs/Timi Dakolo - Everything (Amen) (Official Video).webm" download>Timi Dakolo
+                            -
                             Everything (Amen)<i class="fas fa-download"></i></a></span>
                 </div>
                 <div class="videoCont">
                     <video src="Video/Songs/Timi Dakolo - Everything (Amen) (Official Video).webm" controls
                         controlslist='download'> </video>
                     <span class="download">
-                        <a href="../videos/Timi Dakolo - Everything (Amen) (Official Video).webm" download>Timi Dakolo -
+                        <a href="Video/Songs/Timi Dakolo - Everything (Amen) (Official Video).webm" download>Timi Dakolo
+                            -
                             Everything (Amen)<i class="fas fa-download"></i></a></span>
                 </div>
                 <div class="videoCont">
                     <video src="Video/Songs/Timi Dakolo - Everything (Amen) (Official Video).webm" controls
                         controlslist='download'> </video>
                     <span class="download">
-                        <a href="../videos/Timi Dakolo - Everything (Amen) (Official Video).webm" download>Timi Dakolo -
+                        <a href="Video/Songs/Timi Dakolo - Everything (Amen) (Official Video).webm" download>Timi Dakolo
+                            -
                             Everything (Amen)<i class="fas fa-download"></i></a></span>
                 </div>
                 <div class="videoCont">
                     <video src="Video/Songs/Timi Dakolo - Everything (Amen) (Official Video).webm" controls
                         controlslist='download'> </video>
                     <span class="download">
-                        <a href="../videos/Timi Dakolo - Everything (Amen) (Official Video).webm" download>Timi Dakolo -
+                        <a href="Video/Songs/Timi Dakolo - Everything (Amen) (Official Video).webm" download>Timi Dakolo
+                            -
                             Everything (Amen)<i class="fas fa-download"></i></a></span>
                 </div>
                 <div class="videoCont">
                     <video src="Video/Songs/Timi Dakolo - Everything (Amen) (Official Video).webm" controls
                         controlslist='download'> </video>
                     <span class="download">
-                        <a href="../videos/Timi Dakolo - Everything (Amen) (Official Video).webm" download>Timi Dakolo -
+                        <a href="Video/Songs/Timi Dakolo - Everything (Amen) (Official Video).webm" download>Timi Dakolo
+                            -
                             Everything (Amen)<i class="fas fa-download"></i></a></span>
                 </div>
+            
+            <style>
+                body #videos .videoCont {
+                    width: 45%;
+                    height: 300px;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    flex-direction: column;
+                    box-sizing: border-box;
+                    margin: 30px 10px;
 
-                <style>
-                    body #videos .videoCont {
-                        width: 45%;
-                        height: 300px;
-                        display: flex;
-                        justify-content: center;
-                        align-items: center;
-                        flex-direction: column;
-                        box-sizing: border-box;
-                        margin: 30px 10px;
-
-                    }
-
-
-                    body #videos video {
-                        width: 100%;
-                        height: 300px;
-                        border-radius: 10px 10px 0 0;
-                        background-color: var(--blur);
+                }
 
 
-                    }
+                body #videos video {
+                    width: 100%;
+                    height: 300px;
+                    border-radius: 10px 10px 0 0;
+                    background-color: var(--blur);
 
 
-                    body #videos .download {
-                        width: 100%;
-                        background-color: var(--blur);
-                        padding: 5px;
-                        display: flex;
-                        justify-content: center !important;
-                        align-items: center;
-                        flex-direction: column;
-                        box-sizing: border-box;
-                        border-radius: 0 0 10px 10px;
+                }
 
 
-                    }
+                body #videos .download {
+                    width: 100%;
+                    background-color: var(--blur);
+                    padding: 5px;
+                    display: flex;
+                    justify-content: center !important;
+                    align-items: center;
+                    flex-direction: column;
+                    box-sizing: border-box;
+                    border-radius: 0 0 10px 10px;
 
 
-                    body #videos .download a {
-                        color: var(--color4);
-                        font-size: 20px;
-                        text-decoration: none;
-                        text-align: center;
-                    }
-
-                    body #videos .download a * {
-                        margin: 5px 5px;
-                        font-size: 20px;
-                        float: right;
-                        width: 100%;
-                        display: flex;
-                        justify-content: center !important;
-                        align-items: center;
-                        text-align: center;
+                }
 
 
-                    }
-                </style>
-                <script>
-                    var videoss = document.querySelectorAll('#videos video');
-                    videoss.forEach((vidd) => {
-                        vidd.addEventListener('play', () => {
-                            var stp1 = $(vidd).parent().siblings().children('video');
-                            stp1.pause();
-                        })
+                body #videos .download a {
+                    color: var(--color4);
+                    font-size: 20px;
+                    text-decoration: none;
+                    text-align: center;
+                }
+
+                body #videos .download a * {
+                    margin: 5px 5px;
+                    font-size: 20px;
+                    float: right;
+                    width: 100%;
+                    display: flex;
+                    justify-content: center !important;
+                    align-items: center;
+                    text-align: center;
+
+
+                }
+            </style>
+            <script>
+                var videoss = document.querySelectorAll('#videos video');
+                videoss.forEach((vidd) => {
+                    vidd.addEventListener('play', () => {
+                        var stp1 = $(vidd).parent().siblings().children('video');
+                        stp1.pause();
                     })
-                </script>
+                })
+            </script>
 
             </div>
             <div style="display: none" id="audios" class="hideFirst allThings">
                 <div class="audioCont">
                     <audio src="Audio/enock jonas   baraka.mp3" controls></audio>
                     <span class="download">
-                        <a href="../Audios/enock jonas   baraka.mp3" download>Enock Jonas (Baraka)<i
+                        <a href="Audio/enock jonas   baraka.mp3" download>Enock Jonas (Baraka)<i
                                 class="fas fa-download"></i></a></span>
                 </div>
-
                 <div class="audioCont">
                     <audio src="Audio/enock jonas   baraka.mp3" controls></audio>
                     <span class="download">
-                        <a href="../Audios/enock jonas   baraka.mp3" download>Enock Jonas (Baraka)<i
+                        <a href="Audio/enock jonas   baraka.mp3" download>Enock Jonas (Baraka)<i
                                 class="fas fa-download"></i></a></span>
                 </div>
-
                 <div class="audioCont">
                     <audio src="Audio/enock jonas   baraka.mp3" controls></audio>
                     <span class="download">
-                        <a href="../Audios/enock jonas   baraka.mp3.webm" download>Enock Jonas (Baraka)<i
+                        <a href="Audio/enock jonas   baraka.mp3" download>Enock Jonas (Baraka)<i
                                 class="fas fa-download"></i></a></span>
                 </div>
-
                 <div class="audioCont">
                     <audio src="Audio/enock jonas   baraka.mp3" controls></audio>
                     <span class="download">
-                        <a href="../Audios/enock jonas   baraka.mp3" download>Enock Jonas (Baraka)<i
+                        <a href="Audio/enock jonas   baraka.mp3" download>Enock Jonas (Baraka)<i
                                 class="fas fa-download"></i></a></span>
                 </div>
-
                 <div class="audioCont">
                     <audio src="Audio/enock jonas   baraka.mp3" controls></audio>
                     <span class="download">
-                        <a href="../Audios/enock jonas   baraka.mp3" download>Enock Jonas (Baraka)<i
+                        <a href="Audio/enock jonas   baraka.mp3" download>Enock Jonas (Baraka)<i
                                 class="fas fa-download"></i></a></span>
                 </div>
-
                 <div class="audioCont">
                     <audio src="Audio/enock jonas   baraka.mp3" controls></audio>
                     <span class="download">
-                        <a href="../Audios/enock jonas   baraka.mp3" download>Enock Jonas (Baraka)<i
+                        <a href="Audio/enock jonas   baraka.mp3" download>Enock Jonas (Baraka)<i
                                 class="fas fa-download"></i></a></span>
                 </div>
+                <div class="audioCont">
+                    <audio src="Audio/enock jonas   baraka.mp3" controls></audio>
+                    <span class="download">
+                        <a href="Audio/enock jonas   baraka.mp3" download>Enock Jonas (Baraka)<i
+                                class="fas fa-download"></i></a></span>
+                </div>
+
                 <script>
                     var audioss = document.querySelectorAll('#audios audio');
                     audioss.forEach((audd) => {
@@ -1193,7 +1200,6 @@
                     }
                 </style>
             </div>
-
         </section>
     </section>
     <section id="footer">
